# testing_with_pytest

./: README.md  pyproject.toml
dj_sample/bookstore/: models.py
dj_sample/bookstore/migrations/: 0001_initial.py  0002_alter_book_id.py  0003_book_version.py
dj_sample/bookstore/tests/: conftest.py
dj_sample/config/: settings.py
tests/: factory_script.py
