[tool.poetry]
name = "testing-with-pytest"
version = "0.1.0"
description = ""
authors = ["owari-taro <taro.biwajima@gmail.com>"]
readme = "README.md"
packages = [{include = "testing_with_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-pytest = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest-factoryboy = "^2.5.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py"